# tts

./: .coverage  .env.example  .gitignore  plan.md  pyproject.toml  todo.md
.github/workflows/: ci.yml
app/: config.py  errors.py  main.py
app/api/: __init__.py  routes.py  schemas.py
app/models/: db.py
app/pipelines/: __init__.py  analyze.py  diarize.py  ingest.py  korean_text.py  preprocess.py
app/services/: __init__.py  postprocess.py  synthesis.py  tts_backend.py
app/workers/: __init__.py  tasks.py
docker/: Dockerfile  docker-compose.yml
scripts/: benchmark.py  e2e_smoke.sh
tests/: __init__.py  conftest.py  test_analyze.py  test_api.py  test_db.py  test_diarize.py  test_errors.py  test_ingest.py  test_korean_text.py  test_preprocess.py  test_tts_backend.py  test_workers.py
